Templates/Cilium-HTTProute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp
  namespace: myapp
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-system
      sectionName: https
  
  hostnames:
    - myapp.tmatthews.casa
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      
      backendRefs:
        - name: myapp-service
          port: 80
