Templates/Traefik-IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name:                               # Place name that you want for the ingressRoute here
  namespace:                          # Place namespace where the ingressRoute will be deployed
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.40.50" # Needed for external-dns to create the correct DNS record in Technitium DNS
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure # Matches Traefik's internal port 80 entrypoint
    - web # Matches Traefik's internal port 80 entrypoint
  routes:
  - match: Host(`//:tmatthews.casa`) # Traefik evaluates this dynamically
    kind: Rule
    services:
    - name:              # Your internal Kubernetes app service
      port: 80

  tls:
    secretName: wildcard-tmatthews-casa-tls  # TLS secret
